# mainProject

./: .env  .env.example  .gitignore  ADAPTIVE_RAG_SUMMARY.txt  CHEATSHEET.md  FINAL_IMPLEMENTATION_SUMMARY.txt  HYBRID_RAG_SUMMARY.txt  LANGSMITH_FIX.md  LANGSMITH_GUIDE.md  LANGSMITH_INDEX.md  LANGSMITH_QUICK_FIX.md  LANGSMITH_STATUS.md  LEARNING_PATH.md  NEWS_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REDMINE_IMPLEMENTATION.md  REDMINE_SUMMARY.txt  STRUCTURE.md  TOOL_IMPROVEMENTS.md  langgraph.json  main.py  pyproject.toml  run.py  test_graph.sh  test_graphs.py  test_langsmith_tracing.py  verify_langsmith.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
docs/: ADAPTIVE_RAG.md  ARCHITECTURE.md  CONVERSATION_MEMORY.md  ENHANCED_ADAPTIVE_RAG.md  EXAMPLE_QUERIES.md  GRAPH_COMMANDS_CHEATSHEET.md  HOW_TO_RUN_GRAPHS.md  HYBRID_RAG_COMPLETE_GUIDE.md  LANGGRAPH_STUDIO_GUIDE.md  LANGSMITH_ANNOTATIONS.md  NEWS_QUICK_START.md  NEWS_SUMMARIZATION.md  QUICKSTART.md  RAG_ARCHITECTURE_ANALYSIS.md  REDMINE_CHATBOT.md  REDMINE_QUICK_START.md  SETUP_COMPLETE.md  WHEN_TO_USE_VECTOR_DB.md  news_workflow_diagram.txt
examples/: langsmith_annotations.py  test_news_summary.py  test_redmine_chat.py
redminDocs/: README.md  api_details.json  redmine_metadata.json
scripts/: dev.sh  fetch_redmine_metadata.py  init_vector_store.py  lint.sh  start_studio.sh  test.sh  test_graphs.py
src/agents/graphs/: base.py  deployable.py  news.py  redmine.py
src/agents/nodes/: adaptive_rag.py  base.py  news.py  traced_nodes.py
src/agents/states/: base.py  news.py  redmine.py
src/api/: dependencies.py
src/api/middlewares/: base.py
src/api/v1/: chat.py  health.py  news.py  redmine.py  research.py  writer.py
src/core/: config.py  exceptions.py
src/llms/: base.py
src/schemas/: api.py
src/services/: memory.py  redmine_client.py  redmine_metadata.py  redmine_vectorstore.py
src/tools/: base.py  redmine.py  redmine_enhanced.py  redmine_vector.py
src/utils/: helpers.py  langsmith.py  logger.py  traced_executor.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_llms.py
